# code-review-cli

./: .gitignore  AGENTS.md  README.md  codereview  go.mod  main.go  pyproject.toml
.github/workflows/: ci.yml
cmd/codereview/: main.go
lib/: analyzer.go  lib_test.go  output.go  parser.go  security.go  style.go  types.go  walk.go
