[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "code-review-cli"
version = "0.1.0"
description = "CLI tool for structured code review reports from git diffs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
codereview = "code_review_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_review_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]